# my-api-tests

./: .gitignore  index.html  pyproject.toml  pytest.ini  requirements.txt
.github/workflows/: api_tests.yml
10/: index.html
10/data/: behaviors.json  packages.json  suites.csv  suites.json  timeline.json
10/data/attachments/: 2e1d98dbf728af89.txt
10/data/test-cases/: 228f8c21fa8bdbff.json  461ee9ecfbeef36.json  5758cecfbfd8d660.json  9b42181517599adb.json  c305130ff95c33f6.json  d4de2a2868a2d7fb.json  ea6436c9a1e0f27.json  f2a59f6f198fa524.json
10/export/: influxDbData.txt  prometheusData.txt
10/history/: categories-trend.json  history-trend.json  history.json  retry-trend.json
10/widgets/: duration-trend.json  duration.json  executors.json  severity.json  summary.json
11/: index.html
11/data/: behaviors.json  packages.json  suites.csv  suites.json  timeline.json
11/export/: influxDbData.txt  prometheusData.txt
11/history/: categories-trend.json  history-trend.json  history.json  retry-trend.json
11/widgets/: duration-trend.json  duration.json  executors.json  severity.json  summary.json
12/: index.html
12/data/: behaviors.json  categories.json  packages.json  suites.csv  suites.json  timeline.json
12/export/: influxDbData.txt  prometheusData.txt
12/history/: history-trend.json  history.json
12/widgets/: categories-trend.json  duration-trend.json  duration.json  executors.json  retry-trend.json  severity.json  summary.json
13/: index.html
13/data/: behaviors.json  categories.json  packages.json  suites.csv  suites.json  timeline.json
13/export/: influxDbData.txt  prometheusData.txt
13/history/: history-trend.json  history.json  retry-trend.json
13/widgets/: categories-trend.json  duration-trend.json  duration.json  executors.json  severity.json  summary.json
14/: index.html
14/data/: behaviors.json  categories.json  packages.json  suites.csv  suites.json  timeline.json
14/export/: influxDbData.txt  prometheusData.txt
14/history/: categories-trend.json  duration-trend.json  history.json
14/widgets/: duration.json  executors.json  history-trend.json  retry-trend.json  severity.json  summary.json
api/: base_client.py  user_client.py
data/: users_data.json
models/: base_model.py  user_model.py
tests/: conftest.py  test_users.py
utils/: file_reader.py
(+46 files in other folders)
