[project]
name = "api-tests"
version = "1.0.0"
description = "API Automation Framework"
readme = "README.md"
requires-python = ">=3.11"
# Project dependencies previously located in requirements.txt
dependencies = [
    "pytest>=8.0.0",
    "pytest-xdist>=3.5.0",
    "pytest-dotenv>=0.5.2",
    "pytest-html>=4.1.1",
    "requests>=2.31.0",
    "pydantic[email]>=2.6.0"
]

[tool.setuptools]
# Explicitly define packages for flat-layout discovery
packages = ["api", "data", "models"]

[tool.pytest.ini_options]
# Pytest core configuration
pythonpath = ["."]
testpaths = ["tests"]
python_files = ["test_*.py"]
env_files = [".env"]

# Console logging configuration
log_cli = true
log_cli_level = "INFO"
log_cli_format = "%(asctime)s [%(levelname)8s] %(message)s (%(filename)s:%(lineno)s)"
log_cli_date_format = "%Y-%m-%d %H:%M:%S"

# Default execution arguments (parallel execution and HTML report)
# with threads addopts = "-n auto --html=report.html --self-contained-html"
addopts = "--html=report.html --self-contained-html"

[build-system]
requires = ["setuptools>=70.0", "wheel"]
build-backend = "setuptools.build-meta"