[build-system]
# Modern standards for Python 3.14 (Late 2025)
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "my_api_tests"
version = "0.1.0"
description = "API Automation Framework"
readme = "README.md"
requires-python = ">=3.11"
# List all required libraries here
dependencies = [
    "pytest>=8.0.0",
    "pytest-xdist>=3.5.0",
    "pytest-dotenv>=0.5.2",
    "pytest-html>=4.1.1",
    "requests>=2.31.0",
    "allure-pytest",
    "pydantic[email]>=2.6.0"
]

[tool.setuptools]
# Explicitly include your packages so pip knows what to install
packages = ["api", "data", "models", "utils", "tests"]

[tool.pytest.ini_options]
# Configuration for local and CI execution
pythonpath = ["."]
testpaths = ["tests"]
python_files = ["test_*.py"]
env_files = [".env"]

# Console logging setup
log_cli = true
log_cli_level = "INFO"
log_cli_format = "%(asctime)s [%(levelname)8s] %(message)s (%(filename)s:%(lineno)s)"
log_cli_date_format = "%Y-%m-%d %H:%M:%S"

# Standard report options (removed -n auto as requested)
addopts = "-vs --html=report.html --self-contained-html"